bulf method updates
